@@ -1,21 +1,21 @@
-// src/main/java/com/JoinUs/dp/service/ApplicationService.java
 package com.JoinUs.dp.service;
 
+import com.JoinUs.dp.common.exception.BadRequestException;
 import com.JoinUs.dp.common.exception.NotFoundException;
 import com.JoinUs.dp.dto.ApplicationDto;
 import com.JoinUs.dp.dto.ClubSummary;
 import com.JoinUs.dp.entity.Application;
+import com.JoinUs.dp.entity.Club;
 import com.JoinUs.dp.entity.ClubStatus;
 import com.JoinUs.dp.repository.ApplicationRepository;
 import com.JoinUs.dp.repository.ClubRepository;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,40 +24,39 @@ public class ApplicationService {
     private final ApplicationRepository repository;
     private final ClubRepository clubRepository;
 
-    /* ===========================
-       1. 신청 등록
-       =========================== */
-
+    /* 1. 신청 생성 */
     @Transactional
     public ApplicationDto apply(ApplicationDto dto) {
         Application e = toEntity(dto);
-        e.setId(null);                     // 새 신청
-        e.setStatus(ClubStatus.PENDING);   // 기본값 설정
-
+        e.setStatus(ClubStatus.PENDING);
         return toDto(repository.save(e));
     }
 
-    /* ===========================
-       2. 전체 조회
-       =========================== */
+    /* 2. 전체 조회 (관리자용) */
+    @Transactional(readOnly = true)
     public List<ApplicationDto> findAll() {
         return repository.findAll().stream()
                 .map(this::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    /* ===========================
-       3. 단건 조회
-       =========================== */
+    /* 3. userId로 조회 (마이페이지용) */
+    @Transactional(readOnly = true)
+    public List<ApplicationDto> findByUserId(Long userId) {
+        return repository.findByUserId(userId).stream()
+                .map(this::toDto)
+                .collect(Collectors.toList());
+    }
+
+    /* 4. 단건 조회 */
+    @Transactional(readOnly = true)
     public ApplicationDto findById(Long id) {
         Application e = repository.findById(id)
                 .orElseThrow(() -> new NotFoundException("신청을 찾을 수 없습니다. id=" + id));
         return toDto(e);
     }
 
-    /* ===========================
-       4. 삭제(취소)
-       =========================== */
+    /* 5. 신청 취소 */
     @Transactional
     public void cancel(Long id) {
         if (!repository.existsById(id)) {
@@ -66,137 +65,98 @@ public class ApplicationService {
         repository.deleteById(id);
     }
 
-    /* ===========================
-       5. 전체 수정
-       =========================== */
+    /* 6. 전체 수정 */
     @Transactional
     public ApplicationDto update(ApplicationDto dto) {
-        if (dto.getApplicationId() == null) {
-            throw new IllegalArgumentException("applicationId는 필수입니다.");
-        }
-
         Application e = repository.findById(dto.getApplicationId())
                 .orElseThrow(() -> new NotFoundException("신청을 찾을 수 없습니다. id=" + dto.getApplicationId()));
 
-        e.setUserId(dto.getUserId());
-        e.setClubId(dto.getClubId());
-        e.setStatus(dto.getStatus());
         e.setMessage(dto.getMessage());
+        e.setStatus(dto.getStatus());
 
         return toDto(repository.save(e));
     }
 
-    /* ===========================
-       6. 부분 수정(PATCH)
-       =========================== */
+    /* 7. 부분 수정 (message, status 등) */
     @Transactional
     public ApplicationDto partialUpdate(Long id, Map<String, Object> updates) {
-
         Application e = repository.findById(id)
                 .orElseThrow(() -> new NotFoundException("신청을 찾을 수 없습니다. id=" + id));
 
-        if (updates.containsKey("userId")) {
-            e.setUserId(Long.valueOf(updates.get("userId").toString()));
-        }
-        if (updates.containsKey("clubId")) {
-            e.setClubId(Long.valueOf(updates.get("clubId").toString()));
-        }
-        if (updates.containsKey("status")) {
-            e.setStatus(ClubStatus.valueOf(updates.get("status").toString().toUpperCase()));
-        }
         if (updates.containsKey("message")) {
             e.setMessage((String) updates.get("message"));
+        }
+        if (updates.containsKey("status")) {
+            String status = (String) updates.get("status");
+            e.setStatus(ClubStatus.valueOf(status));
         }
 
         return toDto(repository.save(e));
     }
 
-    /* ===========================
-       7. 클럽별 신청 목록 조회
-       =========================== */
+    /* 8. 클럽별 신청 목록 조회 */
+    @Transactional(readOnly = true)
     public List<ApplicationDto> findByClubId(Long clubId) {
         return repository.findByClubId(clubId).stream()
                 .map(this::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    /* ===========================
-       8. 합격/불합격 설정
-       =========================== */
+    /* 9. 합격/불합격 설정 */
     @Transactional
     public ApplicationDto setResult(Long id, String result, String message) {
-
         Application e = repository.findById(id)
                 .orElseThrow(() -> new NotFoundException("신청을 찾을 수 없습니다. id=" + id));
 
         if ("passed".equalsIgnoreCase(result)) {
-            e.setStatus(ClubStatus.PASSED);
+            e.setStatus(ClubStatus.PASSED);   // ✅ enum에 있는 값만 사용
         } else if ("failed".equalsIgnoreCase(result)) {
             e.setStatus(ClubStatus.FAILED);
         } else {
-            throw new IllegalArgumentException("result 값은 passed 또는 failed 이어야 합니다.");
+            throw new BadRequestException("result 값은 passed 또는 failed 이어야 합니다.");
         }
 
         e.setMessage(message);
         return toDto(repository.save(e));
     }
 
-    /* ===========================
-       9. 합격자 확정/철회
-       =========================== */
+    /* 10. 확정/철회 (예: CONFIRMED / DECLINED) */
     @Transactional
     public ApplicationDto confirmOrDecline(Long id, String action) {
-
         Application e = repository.findById(id)
                 .orElseThrow(() -> new NotFoundException("신청을 찾을 수 없습니다. id=" + id));
-
-        if (!(e.getStatus() == ClubStatus.PASSED || e.getStatus() == ClubStatus.CONFIRMED)) {
-            throw new IllegalStateException("현재 상태에서 확정/철회할 수 없습니다. status=" + e.getStatus());
-        }
 
         if ("confirm".equalsIgnoreCase(action)) {
             e.setStatus(ClubStatus.CONFIRMED);
         } else if ("decline".equalsIgnoreCase(action)) {
             e.setStatus(ClubStatus.DECLINED);
         } else {
-            throw new IllegalArgumentException("action 값은 confirm 또는 decline 이어야 합니다.");
+            throw new BadRequestException("action 값은 confirm 또는 decline 이어야 합니다.");
         }
-
         return toDto(repository.save(e));
     }
 
-    /* ===========================
-       10. 추가 합격
-       =========================== */
+    /* 11. 추가 합격 → 내부적으로도 그냥 PASSED로 처리 */
     @Transactional
     public ApplicationDto additionalOffer(Long id) {
-
         Application e = repository.findById(id)
                 .orElseThrow(() -> new NotFoundException("신청을 찾을 수 없습니다. id=" + id));
 
-        if (e.getStatus() != ClubStatus.FAILED) {
-            throw new IllegalStateException("추가 합격 통보는 FAILED 상태에서만 가능합니다.");
-        }
-
-        e.setStatus(ClubStatus.PASSED);
-        e.setMessage("추가 합격 통보");
-
+        e.setStatus(ClubStatus.PASSED);   // ✅ ADDITIONAL_PASSED 대신 PASSED로 통일
         return toDto(repository.save(e));
     }
 
-    /* ===========================
-       11. 학과별 동아리 조회 (옵션)
-       =========================== */
-    public List<ClubSummary> getClubsByDepartment(String department) {
-        return clubRepository.findByDepartment(department)
-                .stream()
+    /* 12. 학과별 클럽 목록 */
+    @Transactional(readOnly = true)
+    public List<ClubSummary> getClubsByDepartment(String departmentId) {
+        // departmentId를 그대로 department로 사용
+        List<Club> clubs = clubRepository.findByDepartment(departmentId);
+        return clubs.stream()
                 .map(c -> new ClubSummary(c.getClubId(), c.getName()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    /* ===========================
-       내부 변환 메서드
-       =========================== */
+    // ================= 내부 매핑 =================
 
     private ApplicationDto toDto(Application e) {
         return ApplicationDto.from(e);
